      labelled as not part of the API have been removed.

    o DOM2Model public constructors have been deprecated and have changed
      with not backwardly compatible throws declarations.

    o SAX2Model and SAX2RDF factories methods have been deprecated and replaced.

    o SAX2RDF, SAX2Model protected constructors have changed in a not
      backwardly compatible fashion.

Node/Node_Literal/Literal

    o Node has gained the method getIndexingValue(), which is the
      value to use when indexing this Node for GraphMem lookup (and
      other such things). Non-literal nodes return themselves. Literal
      nodes return an appropriate value; the current implementation
      defers to the getIndexingValue() method of the associated
      LiteralLabel.

    o Node has gained the method getLiteralValue(), which fails if
      the node is not a Node_Literal and otherwise returns the
      value of the associated literal. This method allows uses of
      getLiteral().getValue() to be replaced, so that external
      code need not know about getLiteral() as much.

    o Literal::getWellFormed() has been deprecated; it is replaced
      by Literal::isWellFormedXML(). There is a missing API method
      eg isWellFormed() which would apply to any typed literal;
      this will arrive in due course.

    o Support for indexing of typed literals added. NodeToTripleMaps now
      use an indexing object to represent the Node rather than the Node
      itself. That object should implement the appropriate semantic equality:
        index(x) == index(y) <=>  sameValueAs(x, y)
      If future datatyping extensions can't meet this contract it could be weakened to:
        index(x) != index(y) => ! sameValueAs(x, y)
      at the expense of post-processing find results with a sameValueAs test.
      Currently the index objects used are:
        plain literals, no lang and xsd:string literals -> the lexical form
        plain literals, lang tag -> the Node