@@ -4,11 +4,12 @@
 -->
 <foo>
 <rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-    xmlns:eg="http:">
+    xmlns:eg="h^ttp:">
   <rdf:Description rdf:about="http://example.org/node1"
                  xmlns="">
     <eg:prop rdf:resource="http://example.org/node2"/>
   </rdf:Description>
 </rdf:RDF>
-<!-- comment -->
+<!-- comment 
+-->
 </foo>
